--- a/Proposal/introduction.tex
+++ b/Proposal/introduction.tex
@@ -1,34 +1,24 @@
 % !TeX root = proposal.tex
-\chapter{Motivation}\label{motivation}\label{chapter:Motivation}
+\chapter{Motivation}\label{chapter:Motivation}
+ 
+During the last two decades, computers have evolved into intricate personal tracking devices such as smart phones, smart watches, and fitness trackers. At the same time, computers and communication technologies are being embedded in appliances such as TVs, refrigerators, light fixtures and thermostats to create `smart home' environments. Finally, public sensing devices track us as we move about the built environment. By using all kinds of sensors, such as cameras, microphones, GPS, accelerometers, even the simplest of appliances are able to gain knowledge of it's surrounding and thier users. These connected devices, exchange data with each other, and further interact with our day-to-day activities. It's no longer surprising that our smart refrigerator knows what food is stored inside it and notify us that we need to buy groceries when we start our cars as we go back home from work. These smart connected devices are revolutionizing our everyday life.
 
-During the last two decades, computers have evolved into intricate personal smart devices such as smart phones, smart watches, and fitness trackers. At the same time, computers and communication technologies are being embedded in appliances such as TVs, refrigerators, light fixtures and thermostats to create `smart home' environments. By using all kinds of sensors, these connected devices, exchange data with each other, and further interact with our day-to-day activities. For example, a smart fridge would detect that certain groceries are running low, and would trigger a shopping console to order fresh supplies. 
-
-As forecast by Gartner~\cite{van_der_meulen_gartner_nodate}, the total number of 21 billion IoT devices will be in use by 2020. Cisco also predicts the global IoT market will be \$14.4 trillion by 2022. The rapidly accelerating growth of these Internet of Things (IoT) technologies brings a wealth of opportunities as well as risks. Privacy issues are the underlying obstacles to the adoption of social and mobile technologies. Privacy concerns have been identified as an important barrier to the growth of IoT. %It's well known that people are bad at making decisions. 
-This is also true when it comes to the domain of setting privacy for IoT devices. The user interface for setting privacy preference of present IoT device is imperfect even for a smartphone, not to mention the complexity of manually setting privacy preferences for numerous different other IoT devices. Hence, there is a demand to solve the following, urgent research question: How can we help users simplify the task of controlling privacy setting for IoT devices in a user-friendly manner, so that they can make good privacy decisions?
-
-To solve this problem, we developed a data-driven approach to \emph{recommending} privacy settings for users of various IoT environments. In this paper, I first discuss our existing work on recommending privacy preferences for IoT, and subsequently I discuss my proposed study to evaluate these privacy recommendations. 
-%BELOW THIS CAN POTENTIALLY BE REMOVED
-We have used both statistical analysis and machine learning techniques to analyze how IoT users make decision regarding the privacy settings of their devices. Based on the insights gained from this analysis, we designed an intelligent user interface to reduce the complexity of setting privacy for IoT. For my dissertation, I plan to evaluate the user experience of this new interface.
-
-The Internet of Things (IoT) is an outstanding representative of the third wave of computing. The first wave focused on computation, making the basics of computing work. The second wave centered on networking, connecting all of these computers together in a global network. The third wave, of which we are in the early stags, looks at making computers part of the physical world which we are living in. Computation and communication are being embedded into our everyday electronic devices. These computers can use all kinds of sensors, such as cameras, microphones, GPS, accelerometers, and more, to perceive the physical world. More over, these computers are getting smarter every passing day --- they can now even interact with our day-to-day activities. It is no longer surprising that our refrigerator knows what food is stored inside it and notify us that we need to buy groceries when we start our car trying to go back home from work. These smart connected devices are revolutionizing our everyday life. 
-
-%These smart devices ranging from personal devices~\cite{bahirat_exploring_2018,he_data_nodate} (e.g., fitness trackers, smart speakers, smart home appliances) to devices deployed in public areas and ``smart cities'' (e.g., smart billboards, RFID trackers, CCTV cameras)~\cite{bahirat2018data,lee_privacy_2017,pappachan_towards_2017}, are intended to collect information directly related to the users, such as fitness/healthy information, or the environment of users, such as users' home. A main feature of these smart devices, is that they are connected to a larger network of devices via local communication protocols and/or the Internet to create powerful new applications that supports our day-to-day activities. 
-
-% The increasing appearance and impact of IoT devices
-As forecast by Gartner~\cite{van_der_meulen_gartner_nodate}, a total number of 21 billion IoT devices will be in use by 2020. This means that IoT devices are about to dethrone smartphones as the largest category of connected devices by then. Cisco predicts the global Internet of Things market will be \$14.4 trillion by 2022.
-IoT is not a new word to normal users nowadays. Samsung's smart-things, Phillips' Hue smart lighting, Google's Nest smart learning thermostat, and ADT smart home security, Smart watches and fitness trackers, such as the Apple, Android and Pebble watches, Fitbit, Garmin, Jawbone, and Misfit bands, are helping us record our steps, heartbeats, and calories burnt. IoT has already established a huge impact in our everyday lives. 
-
-% The rapid acceleration brings both opportunity and problems
-The rapid accelerating of the IoT brings a wealth of opportunity as well as risks. However, a lot of research has been focusing on the data and technology needs of the IoT -- the sensors, data, and the storage, security, and analysis of the data. However, research to an important aspect of IoT adoption and usage--the humans interacting with those technologies, are lacking. The demand for reducing the complexity and the burden in controlling these devices is urgent. Hence, my dissertation proposal research focuses on simplifying the task of controlling IoT devices for users using a data-driven design. People is bad at making decisions. This is also true in IoT privacy-setting domain [\textbf{need reference}]. To solve this problem, I use statistical analysis and machine learning to analyze how IoT device users make decisions regarding the privacy settings of their devices. Based on the insights gained from this analysis, I design intelligent User Interfaces to reduce the complexity of the privacy-setting user interface.
-
-% Privacy is a big issue of adoption of new IoT technologies
-Privacy issues are the underlying obstacles to the adoption of social and mobile technologies. Privacy concerns have been identified as an important barrier to the growth of Internet of Things. 
-
+%As forecast by Gartner~\cite{van_der_meulen_gartner_nodate}, the total number of 21 billion IoT devices will be in use by 2020. Cisco also predicts the global IoT market will be \$14.4 trillion by 2022. 
+The rapidly accelerating growth of these Internet of Things (IoT) technologies brings a wealth of opportunities as well as risks. Privacy issues are the underlying obstacles to the adoption of social and mobile technologies. Privacy concerns have been identified as an important barrier to the growth of IoT.
 % privacy paradox
-When the users are considering adopting the new IoT devices, they want to take the benefit of using those smart connected electronic devices by sharing and disclosing their certain personal information to get more personalized experience. However, such dis-closured information could be accessed by other smart devices owned by themselves, other people, organizations, government, or some third-parties with good or bad purpose, which will result in unknown risks to the users. Users have to make choices on what information that they want to disclose.
+When the users are considering adopting the new IoT devices, they want to take the benefit of using those smart connected electronic devices by sharing and disclosing their certain personal information to get more personalized experience. However, such disclosured information could be accessed by other smart devices owned by themselves, other people, organizations, government, or some third-parties with good or bad purpose, which will result in unknown risks to the users. Users have to make choices on what information that they want to disclose.
 
 Most Internet users take a pragmatic stance on information disclosure. They implicitly use a method called \textit{privacy calculus} to process their information disclosure decisions. They compare the perceived risks and anticipated benefit, and make decisions based on this risk-benefit analysis.
 
-However, as the increase of the diversity of IoT devices, it becomes more and more difficult to keep up with the many different ways in which data about ourselves is collected and disseminated. Although generally, users care about their privacy, few of them in practice find time to read the privacy policies or play around the privacy setting options that provided to them. There are several reasons leading to this problem: i) Users will think more of the benefit they will enjoy if they use the IoT devices or services than the potential risks if they disclose their information. ii) The privacy policies is too long, or the privacy setting of such devices are too complicated, making users irritated to finish reading/setting them. iii) As the rapid increment of numbers of IoT devices, the numbers and options of privacy setting for all the IoT devices are also increasing exponentially. This privacy-setting choice overload makes it difficult for IoT users to correctly and precisely make their decision to express their true demands. Thus, the main research question I propose to answer in my dissertation proposal is thus:
+However, as the increase of the diversity of IoT devices, it becomes more and more difficult to keep up with the many different ways in which data about ourselves is collected and disseminated. Although generally, users care about their privacy, few of them in practice find time to read the privacy policies or play around the privacy setting options that provided to them. There are several reasons leading to this problem: i) Users will think more of the benefit they will enjoy if they use the IoT devices or services than the potential risks if they disclose their information. ii) The privacy policies is too long, or the privacy setting of such devices are too complicated, making users irritated to finish reading/setting them. iii) As the rapid increment of numbers of IoT devices, the numbers and options of privacy setting for all the IoT devices are also increasing exponentially. This privacy-setting choice overload makes it difficult for IoT users to correctly and precisely make their decision to express their true demands. 
+
+In addition, the user interface for setting privacy preference of present IoT device is imperfect even for a smartphone, not to mention the complexity of manually setting privacy preferences for numerous different other IoT devices. Hence, there is a urgent demand to solve the following research question: 
 
 \textbf{How can we help users simplify the task of controlling privacy setting for IoT devices in a user-friendly manner, so that they can make good privacy decisions?}
+
+This question can be further divided into two sub-questions: 1). Can we recommend them the appropriate IoT privacy-setting according to their decision making characteristics? )2. How do they feel about the new privacy-setting recommendation interface that we made?
+
+To solve the first research question, we developed a data-driven approach to \emph{recommending} privacy settings for users of various IoT environments. In this proposal, I first discuss our existing work on recommending privacy preferences for general IoT and household IoT environments. We have used both statistical analysis and machine learning techniques to analyze how IoT users make decision regarding the privacy settings of their devices. Based on the insights gained from this analysis, we designed an intelligent user interface to reduce the complexity of setting privacy for IoT. Subsequently I discuss my proposed study to evaluate the new interface of recommending privacy-settings for household IoT to answer the second research question, see Chapter 6.
+
+
+
