--- a/Proposal/motivation.tex
+++ b/Proposal/motivation.tex
@@ -1,8 +1,12 @@
 % !TeX root = proposal.tex
 
-\chapter{The Acceptability of IoT}
+\chapter{The Acceptability of IoT}\label{chapter:Acceptability}
 
-To answer this research question, A preliminary user study based on interviews with potential users is conducted to understand the acceptability of IoT systems and devices. We interviewed 10 users with the demographics shown in Table~\ref{tab:demographics1}. The interviews are approximately 30-50 minutes in length and covered a wide range of open questions related to IoT. These questions need participants to input their personal preferences about technology and self-perceived tech savviness. We first recorded the entire conversation with the participants on the understanding that their anonymity was kept. The entire recorded conversation was then transcribed manually. We also tried to take note of other interpersonal cues, e.g. body language, as well. Keywords, such as privacy and ease of use, have been focused on. During the analysis, we extracted the key statement from our interviews and used card sorting and affinity diagram techniques to group the specific statements.
+To better answer the first research question, we conducted  a preliminary user study based on interviews with potential IoT users to gain deeper insight on the acceptability of IoT systems and devices. I first discuss the experimental setup of our preliminary user study. Secondly, I demonstrate the analysis to the results of the study.
+
+\section{Experimental Setup}
+
+For this experiment, we interviewed 10 users with the demographics shown in Table~\ref{tab:demographics1}. The interviews are approximately 30-50 minutes in length and covered a wide range of open questions related to IoT. These questions need participants to input their personal preferences about technology and self-perceived tech savviness. We first recorded the entire conversation with the participants on the understanding that their anonymity was kept. The entire recorded conversation was then transcribed manually. We also tried to take note of other interpersonal cues, e.g. body language, as well. Keywords, such as privacy and ease of use, have been focused on. During the analysis, we extracted the key statement from our interviews and used card sorting and affinity diagram techniques to group the specific statements.
 
 \begin {table}
 \caption {Participants Demographics} \label{tab:demographics1}
@@ -28,27 +32,22 @@ To answer this research question, A preliminary user study based on interviews w
 \end{center}
 \end {table}
 
-Based on the results from our interviews, the factors that affect the acceptability of IoT devices can be summarized into following three aspects: Privacy, Usability, and Affordability. As shown in Figure~\ref{fig:AcceptingProcess}, while making the decision of whether to adopt the IoT technology, the users usually consider the trade-off between privacy and usability as against affordability. If the user's find that they are going to get better usability and privacy at a price that they can afford, they are more likely to go ahead and choose an IoT system. 
 
-In a deeper level of usability, if the users find that the IoT systems will enhance their convenience, they will be more inclined to accept it. However, this is based on their perception of the actual utility of the automation provided by IoT. For example, if someone stays near a grocery store, he/she would tend to believe that there is not enough purpose for an IoT system when it comes to automatic ordering of the same grocery list online. 
+\section{Results Analysis}
+Based on the results from our interviews, the factors that affect the acceptability of IoT devices can be summarized into following three aspects: Privacy, Usability, and Affordability. As shown in Figure~\ref{fig:AcceptingProcess}, while making the decision of whether to adopt the IoT technology, the users usually consider the trade-off between privacy and usability as against affordability. If the user's find that they are going to get better usability and privacy at a price that they can afford, they are more likely to go ahead and choose an IoT system/device. Within the above three aspects, only the usability and privacy  are relevant to our research questions. Since we can not do anything to affordability in our study , however, the results still provide a good insight for manufacturers about the trade-off between usability, privacy , and affordability. Next, we present our analysis to the effect of usability and privacy to the acceptability of IoT systems/devices.
 
-The ability to control, which can also be seen as the capability to dominate over a technical entity and the extent to which this control can be exercised is one of the key aspects in determining the overall usability of the system. If the users think that they have a high level of control, they are likely to believe that the system has better usability.
-
-In terms of privacy, the users primarily make judgments based on the trust they have on the brand/manufacturer and its public image. For example, one of our participants mentioned that he would trust apple when it comes to sharing of information, this participant had immense trust in Apple, based on some great reports recently published in newspapers. Hence, if they trust a brand with their data, they will have a better resolution of their privacy concerns, which would eventually lead to them accepting the technology. It is evident that the brand image will certainly play a key role in new users accepting the IoT technology.
-
-
-\begin{figure}
+\begin{figure}[htb]
 	\centering
 	\includegraphics[width=0.6\columnwidth]{figures/AcceptingProcess.png}
 	\caption{Process of accepting IoT as observed}
 	\label{fig:AcceptingProcess}
 \end{figure}
 
-\section{IoT Privacy and Acceptability}
+\subsection{IoT Privacy and Acceptability}
 In this section, we present the relation between privacy concerns and the acceptability of IoT systems/devices. The most important thing central to any IoT systems/devices is that there exists a constant sharing of information during the usage of such systems/devices. For example, in an environment of Household IoT, a refrigerator can sense what are stored inside it and can notify users when they need to refill the groceries. The entire IoT systems are highly relying on such data collections and sharing in order to provide the best possible experience to the users. However, users may find some of these data collections to be intrusive in nature. The perceived risks from the data collection and sharing can be the main obstacle that users would adopt IoT systems/devices. As one of the participants mentioned that, ``As long as the privacy issue can be managed and the companies can be responsible in keeping encrypted data so that it can't be easily hacked and all that. As long as everybody is respecting that privacy. I love it." Therefore, we consider privacy is one of the most important key factors which users would decide on, prior to accepting a new technology.
 
-\subsection{Type of Information: \textit{What is collected/shared}}
-There are various types of information can be collected/shared in an IoT systems, such as location, photos, voice, and videos. From our interview, we observe that different types of information have different levels of importance to the user. For example, a user may perceive different privacy-related concerns when his/her photos or videos are shared. Below is an excerpt from an interview which highlights the importance of what information is collected/shared:\\
+\subsubsection{Type of Information: \textit{What is collected/shared}}
+There are various types of information can be collected/shared in an IoT systems/devices, such as location, photos, voice, and videos. From our interview, we observe that different types of information have different levels of importance to the user. For example, a user may perceive different privacy-related concerns when his/her photos or videos are shared. Below is an excerpt from an interview which highlights the importance of what information is collected/shared:\\
 
 \textit{I: ``So you are not ok with photo, video or voice?''\\}
 
@@ -66,7 +65,7 @@ Another participant also mentioned, \textit {``Apart from photos, what other kin
 
 It is intriguing that users were well aware of what type of information is collected/shared. This suggests that the designer of future IoT privacy-setting interfaces should provide the user separated options of allowing or denying data collecting/sharing for various types of information.
 
-\subsection{Trust in IoT: \textit{Who is collecting, storing, and sharing my data?}}
+\subsubsection{Trust in IoT: \textit{Who is collecting, storing, and sharing my data?}}
 Another aspect related to the IoT privacy we observed in our interviews is the \textbf{Trust}, the object of which is to whom users' informations are shared with. The object of trust from users can be varied in different contexts of IoT environments. For example, in general IoT environment, the objects can be an individual (e.g. your colleagues), an organization (e.g. your employer), the government and so on. While the user is in a Household IoT environment, his/her information may be first shared within all the connected IoT devices deployed in his/her home for various functionalities. Moreover, those smart IoT devices may further transfer users' information to their manufactures to store on a remote server (cloud) or even share them with the third-party for other purpose, such as advertisements and better recommendations. 
 
 From our interview, we observed that the trust to the second-party or even the third-party also varies from user to user. One of the participants pointed out that, \textit{P: "For example, Apple in the news recently for refuting the FBI. FBI wanted in, Apple said we can't access these phone that actually turned me on to apple I previously used android. And the fact that they say they made their devices so secured that they can't even access them that really interests me. So yeah I am very concerned about it but I think now that I evolved into the Apple eco-system. I pretty much give apple everything because I trust them."}
@@ -96,16 +95,16 @@ It is evident from the conversation above that once established, trust can propa
 
 Based on the interview results, users are well aware of who is collecting, storing, and sharing their data. They have a demand of controlling these data flows proceeded by different second-parties or third-parties. The designer of future IoT privacy-setting interfaces should solve the challenges of differing various second-parties and third-parties, and providing access control options available to users of different IoT contexts.
 
-\section{IoT Usability and Acceptability}
-We now present the effect that usability of the IoT devices has on the acceptability to IoT systems. We first describe the "convenience" and then move forward to discuss "control".
+\subsection{IoT Usability and Acceptability}
+We now present the effect that usability of the IoT devices has on the acceptability to IoT systems/devices. We first describe the "convenience" and then move forward to discuss "control".
 
-\subsection{Convenience and Usability}
-The first most important aspect of usability is convenience. Convenience in case of IoT can be treated as the ease with which the IoT system offers funcitonality. Convenience can simply be a feedback which is provided by the temperature sensors in an household IoT system or the various recommendations provided by a recommender system in a way that it eases the shopping experience on e-commerce websites, such as \textit{Amazon.com}. One of the users was asked about how they would feel being in an IoT environment replied by saying, "Excited actually! When you describe that I don't know if that's sharing your same excitement but.. umm it actually is exciting to me because its so wonderfully convenient, so beautifully convenient." The same participant further went on saying "I love it. I mean it would be awesome to look at my phone right now and say 'oh! My door's unlocked'. Actually my brother has that, actually he can check his phone can look if the door locks. And it's really cool! You don't have to worry when you go out on a trip. Or you can control the A/C if you forgot. It's really cool."  It is clear from this statement that convenience of use of IoT systems is directly associated with the acceptability. Almost all of our participants pointed out the same thing in a similar way. The convenience offered through IoT systems by enabling the users with a common platform from where they can easily connect with their devices goes a long way in improving the overall usability of the systems and thereby impacts the acceptability of IoT in its totality. Usability for a few users also encompasses the aesthetics of any system which is evident from the statements made by participants.
+\subsubsection{Convenience and Usability}
+The first most important aspect of usability is convenience. Convenience in case of IoT can be treated as the ease with which the IoT systems/devices offers funcitonality. Convenience can simply be a feedback which is provided by the temperature sensors in an household IoT system or the various recommendations provided by a recommender system in a way that it eases the shopping experience on e-commerce websites, such as \textit{Amazon.com}. One of the users was asked about how they would feel being in an IoT environment replied by saying, "Excited actually! When you describe that I don't know if that's sharing your same excitement but.. umm it actually is exciting to me because its so wonderfully convenient, so beautifully convenient." The same participant further went on saying "I love it. I mean it would be awesome to look at my phone right now and say 'oh! My door's unlocked'. Actually my brother has that, actually he can check his phone can look if the door locks. And it's really cool! You don't have to worry when you go out on a trip. Or you can control the A/C if you forgot. It's really cool."  It is clear from this statement that convenience of use of IoT systems/devices is directly associated with the acceptability. Almost all of our participants pointed out the same thing in a similar way. The convenience offered through IoT systems/devices by enabling the users with a common platform from where they can easily connect with their devices goes a long way in improving the overall usability of the systems and thereby impacts the acceptability of IoT in its totality. Usability for a few users also encompasses the aesthetics of any system which is evident from the statements made by participants.
 
-\subsection{Being in Control and Usability}
+\subsubsection{Being in Control and Usability}
 Apart from convenience, the feeling of being in control of the system is also of equal importance. Another interesting aspect of control is that it is highly dependent on the information about the state of the system. Any individual will try to control something only when they are aware that it needs to be controlled or that it can be controlled. Therefore, being notified is primarily important before being able to control any aspect of the system. One of the participants when questioned about their opinion of overall usability of any device, mentioned enthusiastically that "I am excited by the idea that me being able to control what they want to do. I am less excited by the idea that them doing autonomously control what they want because some company told them to do it. Luckily the technology is so dumb right now. It's so linear, that it's not good at anticipating the things. But when it gets smarter, as long as it knew that I was an individual who would care, I think the same technology would allow you to totally automate your life but it would allow me to pick and choose which parts to automate". Even though users like a scenario of having everything automated, they still want to believe that they are in a position to control and are always aware of everything that the system is handling. It is evident from the comments that users want to keep absolute automation as a feature, but would probably completely rely on it when they have absolute confidence over its capability to handle things autonomously. A similar example in this regard would be the case of a pilot operating a commercial aircraft who would be prefer it more if the airplane were on autopilot while cruising. Although, he would also like to have the system informing him about the vital stats of the airplane while it's on autopilot. He would rather rely on his/her skills during landing and take-off of the aircraft. Lack of confidence in automated systems during decisive moments is a common trait found in human beings which in this case is clearly exhibited by the pilot.
 
-\subsection{Being Notified and Being in Control}
+\subsubsection{Being Notified and Being in Control}
 "Control" can be the complete manual control of the system or it can be a situation where the user is notified regarding something which can be changed or altered subject to manual intervention. This is basically the system saying that it has an affordance which the user can utilize to better suit his/her convenience. In such a situation, the notification system (perhaps an application for IoT installed on the user's tablet) forms an interface between the machine and the user which serves as a medium to control the degree of automation. The entire idea behind having such an interface is to provide the user with control without compromising convenience. This phenomenon is depicted in the figure~\ref{fig:interface}.
 \begin{figure}
 	\centering
@@ -115,3 +114,14 @@ Apart from convenience, the feeling of being in control of the system is also of
 \end{figure}
 
 The assumption here is that the user is being notified about the several important aspects of the system. Being notified even after allowing something to take place is a requirement prevalent among many participants. One of the participants explicitly mentioned he would like periodic reminders about what is being recorded. This leads us to another interesting aspect of such a scenario which is the 'trust'. We assume that the user trusts the feedback from the system. The notification is perceived by the user as a kind of feedback and this leads to an impression of control in the user's mind where he/she is the master and the system is the apprentice. We think this situation is paramount in establishing trust and all participants desired it.
+
+\section{Summary}
+Based on the above analysis to our results, we see that when making the decision of whether to adopt the IoT technology, the users usually consider the trade-off between privacy and usability as against affordability (See Figure~\ref{fig:AcceptingProcess}). If the user's find that they are going to get better usability and privacy at a price that they can afford, they are more likely to go ahead and try out an IoT device/system. 
+
+In a deeper level of usability, if the users find that the IoT systems/devices will enhance their convenience, they will be more inclined to accept it. However, this is based on their perception of the actual utility of the automation provided by IoT. For example, if someone stays near a grocery store, he/she would tend to believe that there is not enough purpose for an IoT systems/devices when it comes to automatic ordering of the same grocery list online. 
+
+The ability to control, which can also be seen as the capability to dominate over a technical entity and the extent to which this control can be exercised is one of the key aspects in determining the overall usability of the system. If the users think that they have a high level of control, they are likely to believe that the system has better usability.
+
+In terms of privacy, the users primarily make judgments based on the trust they have on the brand/manufacturer and its public image. For example, one of our participants mentioned that he would trust apple when it comes to sharing of information, this participant had immense trust in Apple, based on some great reports recently published in newspapers. Hence, if they trust a brand with their data, they will have a better resolution of their privacy concerns, which would eventually lead to them accepting the technology. It is evident that the brand image will certainly play a key role in new users accepting the IoT technology.
+
+Based on the insights gained from this study, we encourage the designers of IoT privacy-setting interfaces to face the difficult challenge of maximizing the usability and the privacy control of the user interface while minimizing the privacy threats to the users. However, since people differ extensively in their privacy settings~\cite{olson2005study}. At the same time, the vast number of different IoT devices makes choosing adequate privacy settings a very challenging task that is likely to result in information and choice overload~\cite{williams2016perfect}. Under these circumstances, a data-driven design approach seems promising since we could cluster similar users and summarize their privacy preference to generate a set of ``smart profiles" for new users to choose from in our IoT privacy-setting interface. We discuss this data-driven approach in the following chapters.
